--- a/index.html
+++ b/index.html
@@ -184,8 +184,13 @@
         menosdado = lessfidado.response;
         datadado = menosdado.data;
         zerodado = datadado[0];
+        if (zerodado.rastreio == null) {
+            document.getElementById('pedido1').innerHTML += " - sem rastreio"
+        }
         try {
-            document.getElementById('pedido1').innerHTML += " - " + zerodado.rastreio;
+            if (zerodado.rastreio != null) {
+                document.getElementById('pedido1').innerHTML += " - " + zerodado.rastreio;
+            }
         } catch (error) {
             document.getElementById('pedido1').innerHTML += " - sem rastreio"
         }
@@ -197,8 +202,13 @@
         menosdado = lessfidado.response;
         datadado = menosdado.data;
         zerodado = datadado[0];
+        if (zerodado.rastreio == null) {
+            document.getElementById('pedido2').innerHTML += " - sem rastreio"
+        }
         try {
-            document.getElementById('pedido2').innerHTML += " - " + zerodado.rastreio;
+            if (zerodado.rastreio != null) {
+                document.getElementById('pedido2').innerHTML += " - " + zerodado.rastreio;
+            }
         } catch (error) {
             document.getElementById('pedido2').innerHTML += " - sem rastreio"
         }
@@ -210,8 +220,13 @@
         menosdado = lessfidado.response;
         datadado = menosdado.data;
         zerodado = datadado[0];
+        if (zerodado.rastreio == null) {
+            document.getElementById('pedido3').innerHTML += " - sem rastreio"
+        }
         try {
-            document.getElementById('pedido3').innerHTML += " - " + zerodado.rastreio;
+            if (zerodado.rastreio != null) {
+                document.getElementById('pedido3').innerHTML += " - " + zerodado.rastreio;
+            }
         } catch (error) {
             document.getElementById('pedido3').innerHTML += " - sem rastreio"
         }
