--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             </div>
         </ul>
     </main>
+    <div id="popBox" class="popbox"></div>
 </body>
 
 <script>
@@ -102,7 +103,7 @@
             e = document.createElement('div');
             e.setAttribute("id", "popup" + `${i + 1}`);
             e.setAttribute("class", "popup")
-            document.body.appendChild(e);
+            document.getElementById("popBox").appendChild(e);
             x = document.createElement('p');
             x.setAttribute('id', 'close');
             e.appendChild(x);
@@ -127,6 +128,8 @@
                 o.innerHTML += "Início dia: " + arrayDado.startingDate.split('-').reverse().join('/') + "<br>" + "Data planejada: " + arrayDado.contractDate.split('-').reverse().join('/') + "<br>" + 'Status: Em conserto <br>'
             }
             elemento.onclick = function reveal() {
+                box = document.getElementById('popBox');
+                box.style.display = "flex";
                 pop = document.getElementById('popup' + `${i + 1}`);
                 pop.style.display = 'flex';
                 document.body.style.overflow = 'hidden';
@@ -134,6 +137,8 @@
                 b.style.filter = "blur(5px)"
             }
             x.onclick = function erase() {
+                box = document.getElementById('popBox');
+                box.style.display = "none";
                 pop = document.getElementById('popup' + `${i + 1}`);
                 pop.style.display = 'none';
                 document.body.style.overflow = 'auto';
