--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="apple-mobile-web-app-capable" content="yes">
     <title>Consulta Mallorca</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/js-base64@3.7.5/base64.min.js"></script>
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <script>
+        async function CopyToClipboard(id) {
+            var r = document.createRange();
+            console.log(r.selectNode(document.getElementById(id)));
+            r.selectNode(document.getElementById(id));
+            window.getSelection().removeAllRanges();
+            window.getSelection().addRange(r);
+            document.execCommand('copy');
+            window.getSelection().removeAllRanges();
+            document.getElementById('pop').style.display = 'block';
+            setTimeout(() => {
+                document.getElementById('pop').style.display = 'none';
+            }, 2000);
+        }</script>
 </head>
 
 <body>
@@ -17,8 +30,7 @@
         <h2>Insira o código de cliente</h2>
         <div class="text-deliver">
             <input autocomplete="off" max="4" min="1" placeholder="Cód" id="codigo" type="number" class="texto">
-            <span
-                onclick="criarDiv(), postagem(), recept(), process(), poste(), finalrecieve(), projeto(), reveal()"
+            <span onclick="criarDiv(), postagem(), recept(), process(), poste(), finalrecieve(), projeto(), reveal()"
                 class="material-symbols-outlined">
                 send
             </span>
@@ -29,21 +41,25 @@
     </div>
     <main id="blurry">
         <ul id="list" class="list" style="display: none;">
-            <h4>Últimas vendas</h4>
-            <div class="list-item">
+            <h4 onclick="CopyToClipboard('listItem'); return false;">Últimas vendas</h4>
+            <div id="listItem" class="list-item">
                 <p id="header" class="header"></p>
                 <div id="product" class="product">
                 </div>
             </div>
         </ul>
         <ul id="studiolist" class="list" style="display: none;">
-            <h4>Consertos</h4>
+            <h4 onclick="CopyToClipboard('projectProduct'); return false;"> Consertos </h4>
             <div class="list-item">
                 <div id="projectProduct" class="product">
+                    <h2 id="invisible" style="position: fixed; color: transparent;"></h2>
                 </div>
             </div>
         </ul>
     </main>
+    <div class="pop" id="pop">
+        <p>copiado!</p>
+    </div>
 </body>
 <script>
     function reveal() {
@@ -99,6 +115,7 @@
         lless = lessless.data;
         finaldata = lless[0];
         document.getElementById('header').innerHTML = finaldata["_identifier"];
+        document.getElementById('invisible').innerHTML = finaldata["_identifier"];
         finedata = finaldata["id"];
         return finedata
     }
@@ -119,32 +136,40 @@
         parseDado = JSON.parse(dado);
         responseDado = parseDado.response;
         dataDado = responseDado.data;
-
-
+        dataAtual = new Date();
+        dataAtual.getYear();
 
         for (let i = 0; i < dataDado.length; i++) {
             g = document.createElement("p");
             g.setAttribute("id", "conserto" + `${i + 1}`);
+            g.setAttribute("class", "conserto");
             element = document.getElementById('projectProduct');
             element.appendChild(g);
             arrayDado = dataDado[i];
-            dataAtual = new Date();
-            dataAtual.getYear();
             dataPlanejada = new Date(arrayDado.contractDate);
             elemento = document.getElementById('conserto' + `${i + 1}`);
+
+            if (arrayDado.phase != "AC" & dataAtual > dataPlanejada) {
+                //var testee = dataDado.splice(i,i);
+                //arr = {testee};
+                //entering = arr.testee;
+                //console.log(entering[0]);
+            }
+
             if (arrayDado != 'AC' & dataAtual > dataPlanejada & arrayDado.endingDate == null) {
-                elemento.innerHTML = "<span class='span'>" + arrayDado._identifier + "</span>" + "<br>" + "Em atraso, previsto: " + arrayDado.contractDate.split('-').reverse().join('/');
+                elemento.innerHTML = "<strong> Atrasado: " + arrayDado.contractDate.split('-').reverse().join('/') + " </strong> <br>" + "<span class='span'>" + arrayDado._identifier + "</span> ";
             }
             else if (arrayDado.phase == 'AC') {
-                elemento.innerHTML = "<strong> Entregue, finalizado: " + arrayDado.endingDate.split('-').reverse().join('/') + " </strong> <br>" + "<span class='span'>" + arrayDado._identifier + "</span> ";
+                elemento.innerHTML = "<strong> Entregue: " + arrayDado.contractDate.split('-').reverse().join('/') + " </strong> <br>" + "<span class='span'>" + arrayDado._identifier + "</span> ";
             }
             else if (arrayDado.phase != 'AC' & arrayDado.endingDate != null) {
-                elemento.innerHTML = "<span class=''>" + arrayDado._identifier + "</span>" + "<br>" + "Pronto, finalizado: " + arrayDado.endingDate.split('-').reverse().join('/');
+                elemento.innerHTML = "<strong> Pronto: " + arrayDado.endingDate.split('-').reverse().join('/') + " </strong> <br>" + "<span class='span'>" + arrayDado._identifier + "</span> ";
             }
             else if (arrayDado.endingDate == null & dataAtual < dataPlanejada) {
-                elemento.innerHTML = "<span class=''>" + arrayDado._identifier + "</span>" + "<br>" + "Em processo, Planejado: " + arrayDado.contractDate.split('-').reverse().join('/');
+                elemento.innerHTML = "<strong> Em processo: " + arrayDado.contractDate.split('-').reverse().join('/') + " </strong> <br>" + "<span class='span'>" + arrayDado._identifier + "</span> ";
             }
         }
+
         if (document.getElementById('conserto1') == null) {
             c = document.createElement("p");
             c.setAttribute("id", "conserto" + `1`);
@@ -221,6 +246,7 @@
             element.appendChild(g)
             document.getElementById('pedido1').innerHTML = "Não possui vendas nos últimos 60 dias"
         }
+
 
     }
 
