--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" sizes="192x192" href="icon.png"> 
     <title>Consulta</title>
     <link rel="stylesheet" href="style.css">
